--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "web-sql",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "date-and-time": "^2.4.1",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
@@ -17,6 +18,7 @@
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "npm-cli": "^0.1.0",
