--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,6 +30,6 @@
     ],
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#000000",
-    "theme_color": "#000000"
+    "background_color": "#F5A9A9",
+    "theme_color": "#F5A9A9"
 }
